Fixed z-index bug

--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ textarea:focus, input:focus { outline: 0; }
 	text-align: center;
 	width: 49%;
 	display: inline-block;
+	position: relative;
+    z-index: 1;
 }
 .echo.box .echo-type label {
 	margin-bottom: 0;
@@ -102,7 +104,8 @@ textarea:focus, input:focus { outline: 0; }
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	color: #FFFFFF;
 	border: 0;
-	position: relative; z-index: 1;
+	position: relative; 
+	z-index: 1;
 }
 
 .echo.box .priority {
